# like-autoposting

./: Cargo.toml  Dockerfile
.github/: create-docker-image.yaml
src/: main.rs
