[package]
name = "likeposting"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.19", features = ["rt-multi-thread"]}
tokio-cron-scheduler = "0.7"

[dependencies.twitter-v2]
version = "0.1"
default-features = false
features = ["rustls-tls"]